--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -28,7 +28,7 @@ html {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1.0625em;
 }
 
 
@@ -55,7 +55,7 @@ html {
 /* Style the dropdown button to fit inside the topnav */
 
 .dropdown .dropdownButton {
-    font-size: 17px;
+    font-size: 1.0625em;
     border: none;
     outline: none;
     color: white;
@@ -146,7 +146,7 @@ html {
 /* Add a black background color to the top navigation */
 
 .topNavigation {
-    background-color: black;
+    background-color: #181818;
     overflow: hidden;
     width: 100%;
     margin: 0 auto;
@@ -162,14 +162,15 @@ html {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1.0625em;
 }
 
 
 /* Add an active class to highlight the current page */
 
-.active {
-    background-color: #0065e9;
+.topNavigation .active {
+    border-bottom: solid #e95d00 5px;
+    /* background-color: #0065e9; */
     color: white;
 }
 
@@ -198,7 +199,7 @@ html {
 /* Style the dropdown button to fit inside the topnav */
 
 .dropdown .dropdownButton {
-    font-size: 17px;
+    font-size: 1.0625em;
     border: none;
     outline: none;
     color: white;
@@ -330,7 +331,7 @@ p {
 }
 
 .card:hover {
-    box-shadow: 1px 8px 16px 1px darkblue;
+    box-shadow: 1px 8px 16px 1px #444444;
 }
 
 .container {
@@ -377,5 +378,129 @@ p {
 }
 
 .upButton:hover {
-    background-color: rgb(41, 41, 41);
+    background-color: #292929;
+}
+
+
+/* Slide Show */
+
+.productSpotlight {
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 75px;
+}
+
+.spotlightPreview {
+    margin-right: 15px;
+    float: left;
+    margin-left: 30px;
+    float: left;
+    width: 200px;
+}
+
+.spotlightText * {
+    margin-left: 15px;
+    display: block;
+    margin: 2px 0 0 0;
+}
+
+.spotlightTitle {
+    font-size: large;
+}
+
+.spotlightDescription {
+    font-size: normal;
+    text-align: justify;
+}
+
+.spotlightElement {
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 20px;
+    overflow: hidden;
+}
+
+.productSpotlight>.spotlightElement:not(:first-child) {
+    display: none;
+}
+
+.spotlightText {
+    width: 95%;
+}
+
+
+/* Next and Previous Buttons */
+
+.previousSlide,
+.nextSlide {
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    width: auto;
+    margin: 0 auto;
+    padding: 16px;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.nextSlide {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.previousSlide:hover,
+.nextSlide:hover {
+    background-color: #333;
+}
+
+
+/* Slide Dots */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 25%;
+    display: inline-block;
+    transition: 0.6s ease;
+}
+
+.slideDots {
+    display: block;
+    padding-top: 15px;
+    text-align: center;
+    position: absolute;
+}
+
+.slideDots .active {
+    background-color: #333;
+}
+
+.dot:hover {
+    background-color: rgba(51, 51, 51, 0.5);
+}
+
+
+/* Fade Animation */
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
 }
