logo geändert und angepasst

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,7 +5,8 @@ html {
 .logo {
     position: absolute;
     float: left;
-    margin-left: 45%;
+    margin-top: 20px;
+    margin-left: 33%;
 }
 
 
