--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,11 +2,20 @@ html {
     scroll-behavior: smooth;
 }
 
-.logo {
+.logo1 {
     position: absolute;
     float: left;
     margin: 20px;
     margin-left: 33%;
+    display: none;
+}
+
+.logo2 {
+    position: absolute;
+    float: left;
+    margin: 20px;
+    margin-left: 33%;
+
 }
 
 
@@ -40,9 +49,10 @@ html {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family:'Nunito', sans-serif;
     margin: 0px;
     background: #e1e1e1;
+    color: #384047;
 }
 
 h2,
@@ -62,6 +72,7 @@ p {
     display: inline-block;
     height: 350px;
     width: 500px;
+    background: #f9f9f9;;
 }
 
 .card:hover {
@@ -72,6 +83,67 @@ p {
     padding: 40px;
     text-align: center;
 }
+
+/*Login css*/
+.cardlogin{
+    box-shadow: 1px 4px 8px 1px lightgrey;
+    transition: 0.3s;
+    border-radius: 10px;
+    margin: 20px;
+    display: inline-block;
+    height: auto;
+    width: 400px;
+    background: #f9f9f9;
+    text-align: center;
+}
+
+.loginlabelinput{
+    text-align: left;
+    padding-left: 70px;
+}
+
+.cardlogin:hover {
+    box-shadow: 1px 8px 16px 1px #444444;
+}
+
+.containerlogin {
+    padding: 40px;
+    text-align: center;
+}
+
+
+.input_login{
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    background-color: #e1e1e1;
+    color: #292c2e;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+    width: 250px;
+}
+
+.button_login {
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    background-color: #eb7d00;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: auto;
+    border: 1px solid #eb7d00;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0) inset;
+    margin-bottom: 10px;
+}
+
+
+/*footer css*/
 
 .footer {
     padding-top: 30px;
@@ -149,7 +221,7 @@ p {
 }
 
 .spotlightElement {
-    background-color: rgb(245, 245, 245);
+    background-color: #f9f9f9;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 20px;
     overflow: hidden;
