--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -1,76 +1,41 @@
 @media screen and (min-width: 900px) {
-/*
+    /*
     Alles was das  Desktopherz begehrt
 */
     html {
         scroll-behavior: smooth;
     }
-
     .logo1 {
-        position: absolute;
+        display: inline-block;
+        /* position: inline-block;
         float: left;
         margin: 20px;
         margin-left: 33%;
         margin-right: 33%;
-        display: block;
+        display: block; */
     }
-
     .logo2 {
-        position: absolute;
-        float: left;
-        margin: 20px;
-        margin-left: 33%;
-        margin-right: 33%;
         display: none;
     }
-
-
-    /* Add a black background color to the top navigation */
-
-    .header {
-        background-color: #333;
-        overflow: hidden;
-        min-width: 910px;
-        height: 280px;
-    }
-
-
-    /* Style the links inside the navigation bar */
-
-    .header a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 1.0625em;
-    }
-
-
     /* Hide the link that should open and close the topnav on small screens */
-
     .header .icon {
         display: none;
     }
-
     body {
-        font-family:'Nunito', sans-serif;
+        font-family: 'Nunito', sans-serif;
         margin: 0px;
         background: #e1e1e1;
         color: #384047;
     }
-
-    h1,h2,
+    h1,
+    h2,
     p {
         text-align: center;
     }
-
     /*Standard Cards*/
     .cards {
         text-align: center;
     }
-
     .card {
         box-shadow: 1px 4px 8px 1px lightgrey;
         transition: 0.3s;
@@ -81,19 +46,15 @@
         width: auto;
         background: #f9f9f9;
     }
-
     .card:hover {
         box-shadow: 1px 8px 16px 1px #444444;
     }
-
     .container {
         padding: 40px;
         text-align: center;
     }
-
-
     /*Login css*/
-    .cardlogin{
+    .cardlogin {
         box-shadow: 1px 4px 8px 1px lightgrey;
         transition: 0.3s;
         border-radius: 10px;
@@ -103,25 +64,19 @@
         width: 400px;
         background: #f9f9f9;
         text-align: center;
-
     }
-
-    .loginlabelinput{
+    .loginlabelinput {
         text-align: left;
         padding-left: 70px;
     }
-
     .cardlogin:hover {
         box-shadow: 1px 8px 16px 1px #444444;
     }
-
     .containerlogin {
         padding: 40px;
         text-align: center;
     }
-
-
-    .input_login{
+    .input_login {
         background: rgba(255, 255, 255, 0.1);
         border: none;
         font-size: 16px;
@@ -135,7 +90,6 @@
         margin-bottom: 30px;
         width: 250px;
     }
-
     .button_login {
         padding: 19px 39px 18px 39px;
         color: #FFF;
@@ -150,10 +104,8 @@
         box-shadow: 0 -1px 0 rgba(255, 255, 255, 0) inset;
         margin-bottom: 10px;
     }
-
     /*Register css*/
-
-    .cardregister{
+    .cardregister {
         box-shadow: 1px 4px 8px 1px lightgrey;
         transition: 0.3s;
         border-radius: 10px;
@@ -165,25 +117,20 @@
         text-align: center;
         display: inline-block;
     }
-
-    .registerlabel{
+    .registerlabel {
         text-align: left;
         padding-left: 70px;
     }
-
     .cardregister:hover {
         box-shadow: 1px 8px 16px 1px #444444;
     }
-
     .containerregister {
         padding: 40px;
         text-align: center;
         margin: 20px;
         display: inline-block;
     }
-
-
-    .input_register1{
+    .input_register1 {
         background: rgba(255, 255, 255, 0.1);
         border: none;
         font-size: 16px;
@@ -197,8 +144,7 @@
         margin-bottom: 30px;
         width: 250px;
     }
-
-    .input_register2{
+    .input_register2 {
         background: rgba(255, 255, 255, 0.1);
         border: none;
         font-size: 16px;
@@ -212,176 +158,7 @@
         margin-bottom: 30px;
         width: 100px;
     }
-
-
-    /*footer css*/
-
-
-    .footer {
-        padding-top: 30px;
-        padding-right: 30px;
-        padding-bottom: 50px;
-        padding-left: 30px;
-        left: 0;
-        background-color: #333;
-        color: white;
-        text-align: center;
-        margin-top: 10px;
-        min-width: 910px;
-        height: 281px;
-        bottom: 0px;
+    .productForm {
+        width: 60%;
     }
-
-    .upButton {
-        display: block;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        border: none;
-        outline: none;
-        background-color: rgba(131, 131, 131, 0.815);
-        color: white;
-        cursor: pointer;
-        transition: 0.6s ease;
-        border-radius: 15px;
-        font-size: 1.5em;
-    }
-
-    .upButton * {
-        display: block;
-        text-decoration: none;
-        padding: 20px;
-        color: white;
-    }
-
-    .upButton:hover {
-        background-color: #292929;
-    }
-
-
-    /* Slide Show */
-
-    .productSpotlight {
-        width: 80%;
-        margin: 0 auto;
-        position: relative;
-        padding-bottom: 75px;
-    }
-
-    .spotlightPreview {
-        margin-right: 15px;
-        float: left;
-        margin-left: 30px;
-        float: left;
-        width: 200px;
-    }
-
-    .spotlightText * {
-        margin-left: 15px;
-        display: block;
-        margin: 2px 0 0 0;
-    }
-
-    .spotlightTitle {
-        font-size: large;
-    }
-
-    .spotlightDescription {
-        font-size: 1em;
-        text-align: justify;
-    }
-
-    .spotlightElement {
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        padding: 20px;
-        overflow: hidden;
-    }
-
-    .productSpotlight>.spotlightElement:not(:first-child) {
-        display: none;
-    }
-
-    .spotlightText {
-        width: 95%;
-    }
-
-
-    /* Next and Previous Buttons */
-
-    .previousSlide,
-    .nextSlide {
-        cursor: pointer;
-        position: absolute;
-        top: 30%;
-        width: auto;
-        margin: 0 auto;
-        padding: 16px;
-        background-color: rgba(0, 0, 0, 0.2);
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
-    }
-
-    .nextSlide {
-        right: 0;
-        border-radius: 3px 0 0 3px;
-    }
-
-    .previousSlide:hover,
-    .nextSlide:hover {
-        background-color: #333;
-    }
-
-
-    /* Slide Dots */
-
-    .dot {
-        cursor: pointer;
-        height: 15px;
-        width: 15px;
-        margin: 0 2px;
-        background-color: #bbb;
-        border-radius: 25%;
-        display: inline-block;
-        transition: 0.6s ease;
-    }
-
-    .slideDots {
-        display: block;
-        padding-top: 15px;
-        text-align: center;
-        position: absolute;
-    }
-
-    .slideDots .active {
-        background-color: #333;
-    }
-
-    .dot:hover {
-        background-color: rgba(51, 51, 51, 0.5);
-    }
-
-
-    /* Fade Animation */
-
-    .fade {
-        animation-name: fade;
-        animation-duration: 1s;
-    }
-
-    @keyframes fade {
-        from {
-            opacity: 0.4;
-        }
-        to {
-            opacity: 1;
-        }
-    }
-
-
 }
