--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -320,46 +320,6 @@ p {
 }
 
 
-/* error dialog */
-
-.errorMessage {
-    width: 100%;
-    padding: 15px 0;
-    margin: 0 auto;
-    background-color: #f4433670;
-    border-left: 5px solid #e40000;
-    color: #520000;
-    margin-bottom: 20px;
-    font-size: 1.3em;
-}
-
-.errorMessage p {
-    padding: 0px;
-    margin-left: 10px;
-    text-align: left;
-}
-
-.messageClose {
-    margin-left: 25px;
-    margin-right: 25px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 1.5em;
-    line-height: 20px;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.errorMessage .messageClose:hover {
-    color: #520000;
-}
-
-.infoMessage .messageClose:hover {
-    color: rgb(0, 24, 88);
-}
-
-
 /* forms */
 
 .formWrapper {
@@ -444,9 +404,19 @@ p {
     margin-top: 10px;
     margin-bottom: 25px;
     box-sizing: border-box;
-    background-color: #e4e4e4;
     border-radius: 5px;
-    border: none;
+}
+
+.productForm input:not(.errorHighlight),
+.productForm select:not(.errorHighlight),
+.productForm textarea:not(.errorHighlight) {
+    border: 0px;
+    background-color: #e4e4e4;
+}
+
+.productForm textarea {
+    resize: vertical;
+    min-height: 150px;
 }
 
 .productForm input:hover,
@@ -461,6 +431,7 @@ p {
     border-radius: 5px;
     border: none;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .productForm input[type=submit]:hover {
@@ -480,6 +451,11 @@ p {
     font-weight: bold;
 }
 
+.productForm input[type=checkbox] {
+    display: inline;
+    float: right;
+}
+
 
 /* remove arrows from number input */
 
@@ -490,4 +466,199 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
     -moz-appearance: textfield;
+}
+
+
+/* Search Bar */
+
+.searchForm {
+    margin: 0 auto;
+    margin-top: 15px;
+    display: block;
+    width: 90%;
+}
+
+.searchForm input {
+    border: none;
+    display: inline-block;
+    font-size: 1.3em;
+    padding: 12px 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+}
+
+.searchForm input[type="hidden"] {
+    display: none;
+}
+
+.searchForm input[type=search] {
+    width: 85%;
+    border-radius: 5px 0px 0px 5px;
+    float: left;
+}
+
+.searchForm input[type=submit] {
+    width: 10%;
+    border-radius: 0px 5px 5px 0px;
+    float: left;
+    cursor: pointer;
+}
+
+.searchForm::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+/* filter form */
+
+.filterForm {
+    display: block;
+    text-align: left;
+    margin: 25px auto;
+    margin-top: 0px;
+    width: 90%;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.filterForm label,
+.filterForm legend {
+    font-size: 1.3em;
+    display: block;
+}
+
+.filterForm label {
+    margin-bottom: 15px;
+}
+
+.filterForm input[type=text],
+.filterForm input[type=number],
+.filterForm input[type=submit],
+.filterForm select,
+.filterForm select option {
+    width: 100%;
+    padding: 12px 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    background-color: #e4e4e4;
+    border-radius: 5px;
+    border: none;
+    font-size: 1.3em;
+}
+
+.filterForm select {
+    cursor: pointer;
+}
+
+.filterForm fieldset {
+    padding: 12px 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+}
+
+.filterForm input[type=checkbox] {
+    float: right;
+}
+
+.filterForm input[type=submit] {
+    color: #FFF;
+    background-color: #eb7d00;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.filterForm input[type=submit]:hover {
+    background-color: #474747;
+    transition: .1s;
+}
+
+
+/* Show filters */
+
+.filterForm {
+    display: none;
+}
+
+.filterToggle {
+    display: none;
+    cursor: pointer;
+}
+
+.filterToggle:checked+.filterForm {
+    display: block;
+    transition: 0.2s;
+}
+
+.filterToggleLabel {
+    display: block;
+    text-align: left;
+    margin: 25px auto;
+    margin-bottom: 0px;
+    width: 90%;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 5px 5px 0px 0px;
+    position: relative;
+    font-size: 1.3em;
+    cursor: pointer;
+}
+
+.filterToggleLabel .dropIcon {
+    float: right;
+}
+
+
+/* error info outline */
+
+.errorHighlight {
+    border: 3px solid #db0000;
+    background-color: #ff8b8b5b;
+}
+
+
+/* error dialog */
+
+.errorMessage {
+    width: 100%;
+    padding: 15px 0;
+    margin: 0 auto;
+    background-color: #f4433670;
+    border-left: 5px solid #e40000;
+    color: #520000;
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+
+.errorMessage p {
+    padding: 0px;
+    margin-left: 10px;
+    text-align: left;
+}
+
+.messageClose {
+    margin-left: 25px;
+    margin-right: 25px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 1.5em;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.errorMessage .messageClose:hover {
+    color: #520000;
+}
+
+.infoMessage .messageClose:hover {
+    color: rgb(0, 24, 88);
 }
