--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -116,6 +116,77 @@ p {
     margin-bottom: 10px;
 } */
 
+.cardregister {
+    box-shadow: 1px 4px 8px 1px lightgrey;
+    transition: 0.3s;
+    border-radius: 10px;
+    margin: 20px;
+    display: inline-block;
+    height: auto;
+    width: auto;
+    background: #f9f9f9;
+    text-align: center;
+    display: inline-block;
+}
+
+.registerlabel {
+    text-align: left;
+    padding-left: 70px;
+}
+
+.cardregister:hover {
+    box-shadow: 1px 8px 16px 1px #444444;
+}
+
+.containerregister {
+    padding: 40px;
+    text-align: center;
+    margin: 20px;
+    display: inline-block;
+}
+
+.input_register1 {
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    background-color: #e1e1e1;
+    color: #292c2e;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+    width: 250px;
+}
+
+.input_register2 {
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    background-color: #e1e1e1;
+    color: #292c2e;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+    width: 100px;
+}
+
+.formWrapper {
+    text-align: center
+}
+
+.productForm {
+    width: 60%;
+}
+
+.loginForm {
+    width: 450px;
+}
+
 
 /*footer css*/
 
