--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -643,6 +643,23 @@ input[type=number] {
     text-align: left;
 }
 
+.warningMessage {
+    width: 90%;
+    padding: 15px 0;
+    margin: 0 auto;
+    background-color: #fafd21b0;
+    border-left: 5px solid #eba100;
+    color: #522c00;
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+
+.warningMessage p {
+    padding: 0px;
+    margin-left: 10px;
+    text-align: left;
+}
+
 .messageClose {
     margin-left: 25px;
     margin-right: 25px;
@@ -661,4 +678,39 @@ input[type=number] {
 
 .infoMessage .messageClose:hover {
     color: rgb(0, 24, 88);
+}
+
+
+/* Image Gallery */
+
+.imageGallery {
+    display: block;
+    box-sizing: border-box;
+    /* text-align: center; */
+    margin: 0 auto;
+    width: 40%;
+}
+
+.gallerySlide img {
+    width: 100%;
+}
+
+.galleryThumbnail img {
+    cursor: pointer;
+    width: 100%;
+}
+
+.galleryThumbnail img:hover {
+    opacity: .4;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.galleryThumbnail {
+    float: left;
+    max-width: 16.66%;
 }
