--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -32,6 +32,10 @@
     p {
         text-align: center;
     }
+    /* spotlight */
+    .productSpotlight {
+        max-width: 1000px;
+    }
     /*Standard Cards*/
     .cards {
         text-align: center;
@@ -53,57 +57,6 @@
         padding: 40px;
         text-align: center;
     }
-    /*Login css*/
-    /* .cardlogin {
-        box-shadow: 1px 4px 8px 1px lightgrey;
-        transition: 0.3s;
-        border-radius: 10px;
-        margin: 20px;
-        display: inline-block;
-        height: auto;
-        width: 400px;
-        background: #f9f9f9;
-        text-align: center;
-    }
-    .loginlabelinput {
-        text-align: left;
-        padding-left: 70px;
-    }
-    .cardlogin:hover {
-        box-shadow: 1px 8px 16px 1px #444444;
-    }
-    .containerlogin {
-        padding: 40px;
-        text-align: center;
-    }
-    .input_login {
-        background: rgba(255, 255, 255, 0.1);
-        border: none;
-        font-size: 16px;
-        height: auto;
-        margin: 0;
-        outline: 0;
-        padding: 15px;
-        background-color: #e1e1e1;
-        color: #292c2e;
-        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-        margin-bottom: 30px;
-        width: 250px;
-    }
-    .button_login {
-        padding: 19px 39px 18px 39px;
-        color: #FFF;
-        background-color: #eb7d00;
-        font-size: 18px;
-        text-align: center;
-        font-style: normal;
-        border-radius: 5px;
-        width: auto;
-        border: 1px solid #eb7d00;
-        border-width: 1px 1px 3px;
-        box-shadow: 0 -1px 0 rgba(255, 255, 255, 0) inset;
-        margin-bottom: 10px;
-    } */
     /*Register css*/
     .cardregister {
         box-shadow: 1px 4px 8px 1px lightgrey;
