--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -688,6 +688,17 @@ input[type=number] {
     text-align: left;
 }
 
+.successMessage {
+    width: 90%;
+    padding: 15px 0;
+    margin: 0 auto;
+    background-color: #5ff878b0;
+    border-left: 5px solid #00c70a;
+    color: #175200;
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+
 .messageClose {
     margin-left: 25px;
     margin-right: 25px;
