--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -354,36 +354,56 @@ p {
     text-align: center;
 }
 
-
-/* form for login */
-
-.loginForm {
+.formWrapper form {
     margin: 25px auto;
     display: block;
     text-align: left;
-    width: 90%;
     padding: 15px;
     background-color: #ffffff;
     border-radius: 5px;
+    width: 90%;
 }
 
-.loginForm h1 {
+
+/* Generic Form Stuff */
+
+form h1 {
     text-align: center;
 }
 
-.loginForm input {
+form input,
+form select,
+form textarea {
     width: 100%;
     padding: 12px 20px;
     margin-top: 10px;
     margin-bottom: 25px;
-    display: block;
     box-sizing: border-box;
-    background-color: #e4e4e4;
-    border: none;
     border-radius: 5px;
+    border: 0px;
+    background-color: #e4e4e4;
 }
 
-.loginForm input[type=submit] {
+form input:hover,
+form select:hover,
+form textarea:hover {
+    background-color: #f8f8f8;
+}
+
+form input,
+form label,
+form textarea,
+form select {
+    display: block;
+    font-size: 1.3em;
+}
+
+form textarea {
+    resize: vertical;
+    min-height: 150px;
+}
+
+form input[type=submit] {
     color: #FFF;
     background-color: #eb7d00;
     border-radius: 5px;
@@ -392,96 +412,9 @@ p {
     margin-bottom: 10px;
 }
 
-.loginForm input,
-.loginForm label {
-    display: block;
-    font-size: 1.3em;
-}
-
-.loginForm input[type=submit]:hover {
+form input[type=submit]:hover {
     background-color: #474747;
     transition: .1s;
-}
-
-.loginForm label {
-    font-weight: bold;
-}
-
-
-/* new form for new product and product editing */
-
-.productForm {
-    display: block;
-    text-align: left;
-    margin: 25px auto;
-    width: 90%;
-    padding: 15px;
-    background-color: #ffffff;
-    border-radius: 5px;
-}
-
-.productForm h1 {
-    text-align: center;
-}
-
-.productForm input,
-.productForm select,
-.productForm textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-
-.productForm input:not(.errorHighlight),
-.productForm select:not(.errorHighlight),
-.productForm textarea:not(.errorHighlight) {
-    border: 0px;
-    background-color: #e4e4e4;
-}
-
-.productForm textarea {
-    resize: vertical;
-    min-height: 150px;
-}
-
-.productForm input:hover,
-.productForm select:hover,
-.productForm textarea:hover {
-    background-color: #f8f8f8;
-}
-
-.productForm input[type=submit] {
-    color: #FFF;
-    background-color: #eb7d00;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-.productForm input[type=submit]:hover {
-    background-color: #474747;
-    transition: .1s;
-}
-
-.productForm input,
-.productForm label,
-.productForm textarea,
-.productForm select {
-    display: block;
-    font-size: 1.3em;
-}
-
-.productForm label {
-    font-weight: bold;
-}
-
-.productForm input[type=checkbox] {
-    display: inline;
-    float: right;
 }
 
 
@@ -492,33 +425,21 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
-input[type=number] {
+form input[type=number] {
     -moz-appearance: textfield;
+}
+
+form input[type=checkbox] {
+    display: inline !important;
+    float: right;
+}
+
+form label {
+    font-weight: bold;
 }
 
 
 /* Search Bar */
-
-.searchForm {
-    margin: 0 auto;
-    margin-top: 15px;
-    display: block;
-    width: 90%;
-}
-
-.searchForm input {
-    border: none;
-    display: inline-block;
-    font-size: 1.3em;
-    padding: 12px 20px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    box-sizing: border-box;
-}
-
-.searchForm input[type="hidden"] {
-    display: none;
-}
 
 .searchForm input[type=search] {
     width: 85%;
@@ -530,7 +451,7 @@ input[type=number] {
     width: 10%;
     border-radius: 0px 5px 5px 0px;
     float: left;
-    cursor: pointer;
+    margin-top: 10px !important;
 }
 
 .searchForm::after {
@@ -543,40 +464,7 @@ input[type=number] {
 /* filter form */
 
 .filterForm {
-    display: block;
-    text-align: left;
-    margin: 25px auto;
-    margin-top: 0px;
-    width: 90%;
-    padding: 15px;
-    background-color: #ffffff;
-    border-radius: 0px 0px 5px 5px;
-}
-
-.filterForm label,
-.filterForm legend {
-    font-size: 1.3em;
-    display: block;
-}
-
-.filterForm label {
-    margin-bottom: 15px;
-}
-
-.filterForm input[type=text],
-.filterForm input[type=number],
-.filterForm input[type=submit],
-.filterForm select,
-.filterForm select option {
-    width: 100%;
-    padding: 12px 20px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    box-sizing: border-box;
-    background-color: #e4e4e4;
-    border-radius: 5px;
-    border: none;
-    font-size: 1.3em;
+    border-radius: 0px 0px 5px 5px !important;
 }
 
 .filterForm select {
@@ -586,33 +474,15 @@ input[type=number] {
 .filterForm fieldset {
     padding: 12px 20px;
     margin-top: 10px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     box-sizing: border-box;
-}
-
-.filterForm input[type=checkbox] {
-    float: right;
-}
-
-.filterForm input[type=submit] {
-    color: #FFF;
-    background-color: #eb7d00;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-.filterForm input[type=submit]:hover {
-    background-color: #474747;
-    transition: .1s;
 }
 
 
 /* Show filters */
 
 .filterForm {
-    display: none;
+    display: none !important;
 }
 
 .filterToggle {
@@ -621,7 +491,8 @@ input[type=number] {
 }
 
 .filterToggle:checked+.filterForm {
-    display: block;
+    display: block !important;
+    margin-top: 0px;
     transition: 0.2s;
 }
 
@@ -777,6 +648,9 @@ input[type=number] {
     float: left;
     max-width: 16.66%;
 }
+
+
+/* icon Buttons */
 
 .iconButton {
     background-color: #eb7d00;
