--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -362,6 +362,7 @@ p {
     background-color: #ffffff;
     border-radius: 5px;
     width: 90%;
+    font-size: 1.3em;
 }
 
 
@@ -395,7 +396,7 @@ form label,
 form textarea,
 form select {
     display: block;
-    font-size: 1.3em;
+    font-size: 1em;
 }
 
 form textarea {
@@ -756,3 +757,49 @@ form label {
 .vendorContainer .customSubmit:hover {
     background-color: #474747;
 }
+
+/*Src for all buttons*/
+.buttonForAll{
+    width: 90%;
+    color: #FFF;
+    background-color: #eb7d00;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 10px;
+    padding: 10px 0px;
+    cursor: pointer;
+    font-size: 1.3em;
+    transition: .2s ease-in-out;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+/*Table for adminUserManagement*/
+.table-row:nth-child(1) {background: #eb7d00}
+
+.table{
+    display: table;
+    border: #191919;
+    background: white;
+    margin:auto ;
+    border-radius: 5px 5px 0px 0px;
+    padding: 0.5em;
+}
+.table-row {
+    display: table-row;
+    padding: 1em;
+}
+
+.table-cell {
+    display: table-cell;
+    border: #191919;
+    border-spacing: 0.5em;
+    vertical-align: middle;
+
+}
+
+.table-header{
+    display: table-header-group;
+}
+
