--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -298,24 +298,6 @@ p {
 }
 
 
-/* Fade Animation */
-
-
-/* .fade {
-    animation-name: fade;
-    animation-duration: .2s;
-} */
-
-
-/* @keyframes fade {
-    from {
-        opacity: 0.1;
-    }
-    to {
-        opacity: 1;
-    }
-} */
-
 
 /* pages list */
 
@@ -809,6 +791,8 @@ form label {
     display: table-header-group;
 }
 
+
+/*ShoppingCart*/
 .cartListing {
     width: 95%;
     margin: 0 auto;
