--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -376,7 +376,7 @@ form label,
 form textarea,
 form select {
     display: block;
-    font-size: 1em;
+    font-size: .8em;
 }
 
 form textarea {
@@ -390,7 +390,7 @@ form input[type=submit] {
     border-radius: 5px;
     border: none;
     margin-top: 35px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 form input[type=submit]:hover {
@@ -757,65 +757,11 @@ form label {
     margin-bottom: 10px;
     padding: 10px 0px;
     cursor: pointer;
-    font-size: 1.3em;
     transition: .2s ease-in-out;
 }
 
 .vendorContainer .customSubmit:hover {
     background-color: #474747;
-}
-
-
-/*Src for all buttons*/
-
-
-/* .buttonForAll {
-    width: 90%;
-    color: #FFF;
-    background-color: #eb7d00;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 10px;
-    padding: 10px 0px;
-    cursor: pointer;
-    font-size: 1.3em;
-    transition: .2s ease-in-out;
-    margin-right: auto;
-    margin-left: auto;
-} */
-
-
-/*Table for adminUserManagement*/
-
-.table-row:nth-child(1) {
-    background: #eb7d00
-}
-
-.table {
-    display: table;
-    border: #191919;
-    background: white;
-    margin: auto;
-    border-radius: 5px 5px 0px 0px;
-    padding: 0.5em;
-    table-layout: fixed;
-    width: 100%;
-}
-
-.table-row {
-    display: table-row;
-    padding: 1em;
-}
-
-.table-cell {
-    display: table-cell;
-    border: #191919;
-    border-spacing: 0.5em;
-    vertical-align: middle;
-}
-
-.table-header {
-    display: table-header-group;
 }
 
 
@@ -836,7 +782,7 @@ form label {
     display: inline-block;
     padding: 10px;
     max-height: 300px;
-    width: 30%;
+    max-width: 30%;
 }
 
 .cartTotal {
@@ -856,14 +802,21 @@ form label {
 
 .table {
     display: table;
-    /* border-spacing: 0.5em; */
     margin: 0 auto;
     text-align: center;
-    width: 99%;
+    width: 100%;
+}
+
+.table.userManagement {
+    padding: 5px;
 }
 
 .table .tableRow {
     display: table-row;
+}
+
+.table .tableRow::after {
+    clear: both;
 }
 
 .table .tableRow:nth-child(even):not(.head) {
@@ -883,11 +836,20 @@ form label {
     text-align: left;
 }
 
-.table.userManagement .tableCell {
-    max-width: 12%;
+.table.userManagement {
+    width: 95%;
 }
 
-.table.orderCOnfirmation .tableCell {
+.table.userManagement .tableCell {
+    margin: 5px !important;
+    width: 12%;
+}
+
+.table.userManagement .tableRow {
+    border-spacing: 5px;
+}
+
+.table.orderConfirmation .tableCell {
     width: 25%;
 }
 
