--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -195,14 +195,10 @@ p {
 .productSpotlight img {
     max-height: 100%;
     max-width: 100%;
-    margin: 0 auto;
 }
 
 .spotlightElement {
-    background-color: #f9f9f9;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: .3s ease;
-    /* padding: 20px; */
     overflow: hidden;
 }
 
@@ -213,9 +209,9 @@ p {
 
 .spotlightElement .text {
     color: #e1e1e1;
-    background-color: #3333338e;
+    background-color: #333333ed;
     position: absolute;
-    bottom: 14px;
+    bottom: 0px;
     width: 100%;
     text-align: center;
 }
@@ -223,8 +219,8 @@ p {
 .spotlightElement .text .title {
     font-size: 1.5em;
     font-weight: bold;
-    padding-top: 10px;
-    padding: 0;
+    display: block;
+    padding: 5px 0px 0px 0px;
 }
 
 .spotlightElement .text .phrase {
@@ -234,7 +230,10 @@ p {
     padding: 5px 0px 10px 0px;
 }
 
-.productSpotlight>.spotlightElement:not(:first-child) {
+
+/* To hide all element except the first one, if javascript does not work */
+
+.productSpotlight>.productLink:not(:first-child) {
     display: none;
 }
 
@@ -245,6 +244,7 @@ p {
 .nextSlide {
     cursor: pointer;
     position: absolute;
+    display: none;
     top: 50%;
     width: auto;
     margin-top: -22px;
@@ -267,34 +267,6 @@ p {
 .previousSlide:hover,
 .nextSlide:hover {
     background-color: #333;
-}
-
-
-/* Slide Dots */
-
-.slideDots {
-    display: block;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 25%;
-    display: inline-block;
-    transition: 0.6s ease;
-}
-
-.slideDots .active {
-    background-color: #eb7d00;
-}
-
-.dot:hover {
-    background-color: rgba(51, 51, 51, 0.5);
 }
 
 
@@ -639,6 +611,13 @@ form label {
 
 .gallerySlide img {
     width: 100%;
+}
+
+
+/* to show only one image, if javascript is disabled */
+
+.imageGallery>.gallerySlide:not(:first-child) {
+    display: none;
 }
 
 .galleryThumbnail img {
