--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -153,29 +153,34 @@ p {
 
 .upButton {
     display: block;
+    visibility: hidden;
+    opacity: 0;
     position: fixed;
     bottom: 20px;
     right: 30px;
+    height: 60px;
+    width: 60px;
     z-index: 99;
     border: none;
     outline: none;
     background-color: rgba(131, 131, 131, 0.815);
-    color: white;
     cursor: pointer;
-    transition: 0.6s ease;
-    border-radius: 15px;
-    font-size: 1.5em;
-}
-
-.upButton * {
-    display: block;
-    text-decoration: none;
-    padding: 20px;
-    color: white;
+    border-radius: 50%;
+    /* padding: 5px; */
+    /* font-size: 1.5em; */
+    transition: visibility 0.2s, opacity 0.1s linear;
 }
 
 .upButton:hover {
     background-color: #292929;
+}
+
+.upButton img {
+    display: block;
+    width: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(50%, 50%);
 }
 
 
