--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,24 +45,55 @@ p {
 
 /* #region productCards */
 
-.cards {
+.productCard {
+    margin: auto;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 4px 8px 0 #00000033;
+    background-color: white;
+    max-width: 95%;
+    text-align: center;
+    display: inline-block;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.productCard .price {
+    color: grey;
+    font-size: 1.2em;
+}
+
+.productCard .productPreview .productImage {
+    width: 100%;
+}
+
+.productCard .productPreview {
+    position: relative;
+}
+
+.productPreview.hidden {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+
+/* .cards {
     text-align: center;
 }
 
-.card {
+.productCard {
     box-shadow: 1px 4px 8px 1px lightgrey;
     transition: 0.3s;
     border-radius: 10px;
     margin: 20px;
     display: inline-block;
-    height: 350px;
     max-width: 500px;
     background: #f9f9f9;
     overflow: hidden;
     ;
 }
 
-.card img {
+.productCard img {
     width: 90%;
 }
 
@@ -71,9 +102,9 @@ p {
     filter: grayscale(100%);
 }
 
-.card:hover {
+.productrCard:hover {
     box-shadow: 1px 8px 16px 1px #444444;
-}
+} */
 
 
 /* #endregion */
@@ -493,6 +524,7 @@ form label {
 
 .filterToggle:checked+.filterForm {
     display: block !important;
+    width: 90%;
     margin-top: 0px;
     transition: 0.2s;
 }
@@ -701,12 +733,11 @@ form label {
 
 .iconButton {
     background-color: #eb7d00;
-    border-radius: 50px;
     border: none;
-    height: 60px;
-    width: 60px;
+    height: 100%;
+    width: 100%;
     padding: 5px;
-    transition: .1s;
+    transition: .1s ease-in-out;
     outline: none;
 }
 
@@ -719,32 +750,29 @@ form label {
     width: 70%;
 }
 
-.productPreview form {
-    position: relative;
-    bottom: 40px;
-    right: -45%;
+.productPreview .badge {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    right: 15px;
+    bottom: 5px;
+    overflow: hidden;
+    border-radius: 50%;
 }
 
 .hiddenIcon {
-    position: relative;
-    display: block;
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
     background-color: grey;
-    bottom: 40px;
-    right: -85%;
 }
 
 .hiddenIcon img {
-    display: block;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    width: 70%;
-    margin: 0;
+    vertical-align: center;
+    max-height: 100%;
+    max-width: 70%;
     border: none;
-    transform: translate(-50%, -50%);
 }
 
 
